--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8" />
     <title>Champ - Website Template</title>
-    <meta content="QAPP is a clean and modern template for Mobile App. It’s very easy to customize and use in your project according to your needs." name="description" />
-    <meta content="QAPP - Webflow HTML website template" property="og:title" />
-    <meta content="QAPP is a clean and modern template for Mobile App. It’s very easy to customize and use in your project according to your needs." property="og:description" />
+    <meta content="CAPP is a clean and modern template for Mobile App. It’s very easy to customize and use in your project according to your needs." name="description" />
+    <meta content="CAPP - Webflow HTML website template" property="og:title" />
+    <meta content="CAPP is a clean and modern template for Mobile App. It’s very easy to customize and use in your project according to your needs." property="og:description" />
     <meta content="summary" name="twitter:card" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link href="https://jamespeterjacob.github.io/app/appstylesheet.css" rel="stylesheet" type="text/css" />
@@ -21,7 +21,7 @@
     <div data-collapse="medium" data-animation="default" data-duration="400" class="navigation-bar w-hidden-main w-nav">
         <div class="w-container">
             <a href="#" class="logo-brand w-nav-brand">
-                <img src="https://jamespeterjacob.github.io/app/qapplogo1.png" width="120" alt="" />
+                <img src="https://jamespeterjacob.github.io/app/5382913478e1ff6971386e33_qapp-logo.svg" width="120" alt="" />
             </a>
             <nav role="navigation" class="navigation-menu w-nav-menu">
                 <a href="#home" class="navigation-link w-nav-link">Home</a>
@@ -36,14 +36,14 @@
     <div data-collapse="medium" data-animation="default" data-duration="400" data-w-id="a67084e7-ef9d-b3e5-defa-49c66a797943" style="-webkit-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="navigation-scroll w-hidden-medium w-hidden-small w-hidden-tiny w-nav">
         <div class="w-container">
             <a href="#home" class="logo-brand w-nav-brand">
-                <img src="https://assets.website-files.com/53828cf678e1ff6971386e1d/5383149178e1ff6971387a6a_qapp-logo2.png" width="120" alt="" />
+                <img src="https://jamespeterjacob.github.io/app/5383149178e1ff6971387a6a_qapp-logo2.svg" width="120" alt="" />
             </a><nav role="navigation" class="w-nav-menu"><a href="#home" class="navigation-link w-nav-link">Home</a><a href="#features" class="navigation-link w-nav-link">features</a><a href="#why" class="navigation-link w-nav-link">why us</a><a href="#describe" class="navigation-link w-nav-link">describe</a><a href="#what" class="navigation-link w-nav-link">services</a><a href="#contact" class="navigation-link w-nav-link">contact</a></nav><div class="w-nav-button"><div class="w-icon-nav-menu"></div></div>
         </div>
     </div>
     <div id="home" class="banner">
         <div data-w-id="474d652b-c329-9037-5688-d8859db2970a" style="opacity:0" class="logo">
-            <img src="https://assets.website-files.com/53828cf678e1ff6971386e1d/5382913478e1ff6971386e33_qapp-logo.png" width="130" data-ix="slide-in-from-top-on-load" alt="" class="brand" /><a href="#" class="download w-inline-block"><img src="https://assets.website-files.com/53828cf678e1ff6971386e1d/538298aa78e1ff6971386eaa_ico1.png" width="25" alt="" class="icon" /><div class="download-text">app store</div></a><a href="#" class="download w-inline-block"><img src="https://assets.website-files.com/53828cf678e1ff6971386e1d/5382995a5aa5711a5494f04e_ico2.png" width="25" alt="" class="icon" /><div class="download-text">play store</div></a>
-        </div><div data-ix="slide-in-scroll-navigation-on-scroll" class="banner-container w-container"><h1 data-w-id="7c82e3df-ed7d-c5e7-afdb-d042745d9dbd" style="opacity:0" class="title">meet qapp<span class="original">®</span></h1><div data-w-id="34a2f747-88c9-e208-f78a-db2d269fbd83" style="opacity:0" class="text-banner">Extraordinary app that makes your everyday life so much easier!</div></div>
+            <img src="https://jamespeterjacob.github.io/app/5382913478e1ff6971386e33_qapp-logo.svg" width="130" data-ix="slide-in-from-top-on-load" alt="" class="brand" /><a href="#" class="download w-inline-block"><img src="https://assets.website-files.com/53828cf678e1ff6971386e1d/538298aa78e1ff6971386eaa_ico1.png" width="25" alt="" class="icon" /><div class="download-text">app store</div></a><a href="#" class="download w-inline-block"><img src="https://assets.website-files.com/53828cf678e1ff6971386e1d/5382995a5aa5711a5494f04e_ico2.png" width="25" alt="" class="icon" /><div class="download-text">play store</div></a>
+        </div><div data-ix="slide-in-scroll-navigation-on-scroll" class="banner-container w-container"><h1 data-w-id="7c82e3df-ed7d-c5e7-afdb-d042745d9dbd" style="opacity:0" class="title">meet capp<span class="original">®</span></h1><div data-w-id="34a2f747-88c9-e208-f78a-db2d269fbd83" style="opacity:0" class="text-banner">Extraordinary app that makes your everyday life so much easier!</div></div>
     </div>
     <div class="iphone-section">
         <div class="w-container">
@@ -93,7 +93,7 @@
     <section class="testimonials-section">
         <div class="container w-container">
             <div class="heading-line"></div>
-            <h2 class="name-title">WHAT THEY SAY</h2><div class="features w-row"><div class="column-space w-col w-col-4"><p>Want to see something magical? Go compress a few PNG&#x27;s with @Qapp. We just saved 4MB.</p><div class="client-name">Laura William</div><div class="photo-testimonials"></div></div><div class="column-space w-col w-col-4"><p>Just changed the file size on 31 images, as well as Qapp, page is now under 1/2 a MB. So much better!</p><div class="client-name">John Doe</div><div class="photo-testimonials photo-2"></div></div><div class="w-col w-col-4"><p>Pretty impressed with Qapp so far. Compressed images on a site and saved just over 1mb.</p><div class="client-name">Vilma Bekon</div><div class="photo-testimonials photo-3"></div></div></div>
+            <h2 class="name-title">WHAT THEY SAY</h2><div class="features w-row"><div class="column-space w-col w-col-4"><p>Want to see something magical? Go compress a few PNG&#x27;s with @capp. We just saved 4MB.</p><div class="client-name">Laura William</div><div class="photo-testimonials"></div></div><div class="column-space w-col w-col-4"><p>Just changed the file size on 31 images, as well as Capp, page is now under 1/2 a MB. So much better!</p><div class="client-name">John Doe</div><div class="photo-testimonials photo-2"></div></div><div class="w-col w-col-4"><p>Pretty impressed with Capp so far. Compressed images on a site and saved just over 1mb.</p><div class="client-name">Vilma Bekon</div><div class="photo-testimonials photo-3"></div></div></div>
         </div>
     </section>
     <section id="what" class="what-section">
@@ -113,7 +113,7 @@
                     <img src="https://assets.website-files.com/53828cf678e1ff6971386e1d/5384aa201fae7daf76e9d610_footer3.png" width="30" alt="" /><div class="mail-contact">+1 046 244 3912</div>
                 </div>
             <div class="column-service w-col w-col-4">
-                <img src="https://assets.website-files.com/53828cf678e1ff6971386e1d/5384a8fa1fae7daf76e9d5f8_footer2.png" width="30" alt="" /><a href="#" target="_blank" class="mail-contact">youremail@qapp.com</a><a href="#" target="_blank" class="mail-contact mail-contact-2">other@gmail.com</a></div><div class="column-service w-col w-col-4"><img src="https://assets.website-files.com/53828cf678e1ff6971386e1d/5384a8daf86af53757dc0054_footer1.png" width="30" alt="" /><div class="mail-contact">350 Fourth Avenue, <br />34th floor New York, USA</div></div>
+                <img src="https://assets.website-files.com/53828cf678e1ff6971386e1d/5384a8fa1fae7daf76e9d5f8_footer2.png" width="30" alt="" /><a href="#" target="_blank" class="mail-contact">youremail@capp.com</a><a href="#" target="_blank" class="mail-contact mail-contact-2">other@gmail.com</a></div><div class="column-service w-col w-col-4"><img src="https://assets.website-files.com/53828cf678e1ff6971386e1d/5384a8daf86af53757dc0054_footer1.png" width="30" alt="" /><div class="mail-contact">350 Fourth Avenue, <br />34th floor New York, USA</div></div>
             </div>
             <div class="line-footer"></div>
             <div class="logo-footer">
