--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div data-collapse="medium" data-animation="default" data-duration="400" class="navigation-bar w-hidden-main w-nav">
         <div class="w-container">
             <a href="#" class="logo-brand w-nav-brand">
-                <img src="https://jamespeterjacob.github.io/app/5382913478e1ff6971386e33_qapp-logo.svg" width="120" alt="" />
+                <img src="https://jamespeterjacob.github.io/app/capp1.svg" width="120" alt="" />
             </a>
             <nav role="navigation" class="navigation-menu w-nav-menu">
                 <a href="#home" class="navigation-link w-nav-link">Home</a>
@@ -36,13 +36,15 @@
     <div data-collapse="medium" data-animation="default" data-duration="400" data-w-id="a67084e7-ef9d-b3e5-defa-49c66a797943" style="-webkit-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="navigation-scroll w-hidden-medium w-hidden-small w-hidden-tiny w-nav">
         <div class="w-container">
             <a href="#home" class="logo-brand w-nav-brand">
-                <img src="https://jamespeterjacob.github.io/app/5383149178e1ff6971387a6a_qapp-logo2.svg" width="120" alt="" />
+                <img src="https://jamespeterjacob.github.io/app/capp2.svg" width="120" alt="" />
             </a><nav role="navigation" class="w-nav-menu"><a href="#home" class="navigation-link w-nav-link">Home</a><a href="#features" class="navigation-link w-nav-link">features</a><a href="#why" class="navigation-link w-nav-link">why us</a><a href="#describe" class="navigation-link w-nav-link">describe</a><a href="#what" class="navigation-link w-nav-link">services</a><a href="#contact" class="navigation-link w-nav-link">contact</a></nav><div class="w-nav-button"><div class="w-icon-nav-menu"></div></div>
         </div>
     </div>
     <div id="home" class="banner">
         <div data-w-id="474d652b-c329-9037-5688-d8859db2970a" style="opacity:0" class="logo">
-            <img src="https://jamespeterjacob.github.io/app/5382913478e1ff6971386e33_qapp-logo.svg" width="130" data-ix="slide-in-from-top-on-load" alt="" class="brand" /><a href="#" class="download w-inline-block"><img src="https://assets.website-files.com/53828cf678e1ff6971386e1d/538298aa78e1ff6971386eaa_ico1.png" width="25" alt="" class="icon" /><div class="download-text">app store</div></a><a href="#" class="download w-inline-block"><img src="https://assets.website-files.com/53828cf678e1ff6971386e1d/5382995a5aa5711a5494f04e_ico2.png" width="25" alt="" class="icon" /><div class="download-text">play store</div></a>
+            <img src="" width="130" data-ix="slide-in-from-top-on-load" alt="" class="brand" />
+        <a href="#" class="download w-inline-block">
+            <img src="https://assets.website-files.com/53828cf678e1ff6971386e1d/538298aa78e1ff6971386eaa_ico1.png" width="25" alt="" class="icon" /><div class="download-text">app store</div></a><a href="#" class="download w-inline-block"><img src="https://assets.website-files.com/53828cf678e1ff6971386e1d/5382995a5aa5711a5494f04e_ico2.png" width="25" alt="" class="icon" /><div class="download-text">play store</div></a>
         </div><div data-ix="slide-in-scroll-navigation-on-scroll" class="banner-container w-container"><h1 data-w-id="7c82e3df-ed7d-c5e7-afdb-d042745d9dbd" style="opacity:0" class="title">meet capp<span class="original">®</span></h1><div data-w-id="34a2f747-88c9-e208-f78a-db2d269fbd83" style="opacity:0" class="text-banner">Extraordinary app that makes your everyday life so much easier!</div></div>
     </div>
     <div class="iphone-section">
