--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
     <div id="home" class="banner">
         <div data-w-id="474d652b-c329-9037-5688-d8859db2970a" style="opacity:0" class="logo">
-            <img src="" width="130" data-ix="slide-in-from-top-on-load" alt="" class="brand" />
+            <img src="https://jamespeterjacob.github.io/app/capp1.svg" width="130" data-ix="slide-in-from-top-on-load" alt="" class="brand" />
         <a href="#" class="download w-inline-block">
             <img src="https://assets.website-files.com/53828cf678e1ff6971386e1d/538298aa78e1ff6971386eaa_ico1.png" width="25" alt="" class="icon" /><div class="download-text">app store</div></a><a href="#" class="download w-inline-block"><img src="https://assets.website-files.com/53828cf678e1ff6971386e1d/5382995a5aa5711a5494f04e_ico2.png" width="25" alt="" class="icon" /><div class="download-text">play store</div></a>
         </div><div data-ix="slide-in-scroll-navigation-on-scroll" class="banner-container w-container"><h1 data-w-id="7c82e3df-ed7d-c5e7-afdb-d042745d9dbd" style="opacity:0" class="title">meet capp<span class="original">®</span></h1><div data-w-id="34a2f747-88c9-e208-f78a-db2d269fbd83" style="opacity:0" class="text-banner">Extraordinary app that makes your everyday life so much easier!</div></div>
