--- a/index.html
+++ b/index.html
@@ -37,15 +37,31 @@
         <div class="w-container">
             <a href="#home" class="logo-brand w-nav-brand">
                 <img src="https://jamespeterjacob.github.io/app/capp2.svg" width="120" alt="" />
-            </a><nav role="navigation" class="w-nav-menu"><a href="#home" class="navigation-link w-nav-link">Home</a><a href="#features" class="navigation-link w-nav-link">features</a><a href="#why" class="navigation-link w-nav-link">why us</a><a href="#describe" class="navigation-link w-nav-link">describe</a><a href="#what" class="navigation-link w-nav-link">services</a><a href="#contact" class="navigation-link w-nav-link">contact</a></nav><div class="w-nav-button"><div class="w-icon-nav-menu"></div></div>
+            </a>
+            <nav role="navigation" class="w-nav-menu">
+                <a href="#home" class="navigation-link w-nav-link">Home</a>
+                <a href="#features" class="navigation-link w-nav-link">features</a>
+                <a href="#why" class="navigation-link w-nav-link">why us</a>
+                <a href="#describe" class="navigation-link w-nav-link">describe</a>
+                <a href="#what" class="navigation-link w-nav-link">services</a>
+                <a href="#contact" class="navigation-link w-nav-link">contact</a>
+            </nav>
+            <div class="w-nav-button">
+                <div class="w-icon-nav-menu"></div>
+            </div>
         </div>
     </div>
     <div id="home" class="banner">
         <div data-w-id="474d652b-c329-9037-5688-d8859db2970a" style="opacity:0" class="logo">
             <img src="https://jamespeterjacob.github.io/app/capp1.svg" width="130" data-ix="slide-in-from-top-on-load" alt="" class="brand" />
-        <a href="#" class="download w-inline-block">
-            <img src="https://assets.website-files.com/53828cf678e1ff6971386e1d/538298aa78e1ff6971386eaa_ico1.png" width="25" alt="" class="icon" /><div class="download-text">app store</div></a><a href="#" class="download w-inline-block"><img src="https://assets.website-files.com/53828cf678e1ff6971386e1d/5382995a5aa5711a5494f04e_ico2.png" width="25" alt="" class="icon" /><div class="download-text">play store</div></a>
-        </div><div data-ix="slide-in-scroll-navigation-on-scroll" class="banner-container w-container"><h1 data-w-id="7c82e3df-ed7d-c5e7-afdb-d042745d9dbd" style="opacity:0" class="title">meet capp<span class="original">®</span></h1><div data-w-id="34a2f747-88c9-e208-f78a-db2d269fbd83" style="opacity:0" class="text-banner">Extraordinary app that makes your everyday life so much easier!</div></div>
+            <a href="#" class="download w-inline-block">
+                <img src="https://assets.website-files.com/53828cf678e1ff6971386e1d/538298aa78e1ff6971386eaa_ico1.png" width="25" alt="" class="icon" /><div class="download-text">app store</div>
+            </a><a href="#" class="download w-inline-block"><img src="https://assets.website-files.com/53828cf678e1ff6971386e1d/5382995a5aa5711a5494f04e_ico2.png" width="25" alt="" class="icon" /><div class="download-text">play store</div></a>
+        </div>
+        <div data-ix="slide-in-scroll-navigation-on-scroll" class="banner-container w-container">
+            <h1 data-w-id="7c82e3df-ed7d-c5e7-afdb-d042745d9dbd" style="opacity:0" class="title">meet capp<span class="original">®</span></h1>
+            <div data-w-id="34a2f747-88c9-e208-f78a-db2d269fbd83" style="opacity:0" class="text-banner">Extraordinary app that makes your everyday life so much easier!</div>
+        </div>
     </div>
     <div class="iphone-section">
         <div class="w-container">
@@ -69,8 +85,16 @@
         <div class="w-container">
             <div class="w-row">
                 <div class="column-center w-col w-col-3">
-                    <img src="https://assets.website-files.com/53828cf678e1ff6971386e1d/5383216978e1ff6971387c87_logo1.png" alt="" />
-                </div><div class="column-center w-col w-col-3"><img src="https://assets.website-files.com/53828cf678e1ff6971386e1d/538321795aa5711a5494fee8_logo2.png" alt="" /></div><div class="column-center w-col w-col-3"><img src="https://assets.website-files.com/53828cf678e1ff6971386e1d/538321838a5f2a68714e371a_logo3.png" alt="" /></div><div class="column-center w-col w-col-3"><img src="https://assets.website-files.com/53828cf678e1ff6971386e1d/5383218bf8f93419545178b5_logo4.png" alt="" /></div>
+                    <img src="" alt="" />
+                </div>
+                <div class="column-center w-col w-col-3">
+                    <img src="https://assets.website-files.com/53828cf678e1ff6971386e1d/538321795aa5711a5494fee8_logo2.png" alt="" />
+                </div>
+                <div class="column-center w-col w-col-3">
+                    <img src="https://assets.website-files.com/53828cf678e1ff6971386e1d/538321838a5f2a68714e371a_logo3.png" alt="" />
+                </div><div class="column-center w-col w-col-3">
+                    <img src="https://assets.website-files.com/53828cf678e1ff6971386e1d/5383218bf8f93419545178b5_logo4.png" alt="" />
+                </div>
             </div>
         </div>
     </section>
@@ -78,8 +102,11 @@
         <div class="container w-container">
             <div class="w-row">
                 <div class="column-space w-col w-col-4">
-                    <div class="heading-line why"></div><h2 class="name-title why">describe your app</h2><p>Wpsum dolor sit amet, consectetur adipisici elit, sed do eiusmod tempor incididunt <br />ore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<br /><br />Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut modo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet.</p>
-                </div><div data-w-id="b000aa60-f756-2897-7ace-a9d1383eb7b2" style="opacity:0" class="app w-col w-col-8"><img src="https://assets.website-files.com/53828cf678e1ff6971386e1d/53837f7cf8f9341954518299_app-mockup2.png" srcset="https://assets.website-files.com/53828cf678e1ff6971386e1d/53837f7cf8f9341954518299_app-mockup2-p-500x295.png 500w, https://assets.website-files.com/53828cf678e1ff6971386e1d/53837f7cf8f9341954518299_app-mockup2.png 600w" sizes="(max-width: 767px) 100vw, (max-width: 991px) 498.65625px, 639.984375px" alt="" /></div>
+                    <div class="heading-line why"></div><h2 class="name-title why">describe your app</h2>
+                <p>Wpsum dolor sit amet, consectetur adipisici elit, sed do eiusmod tempor incididunt <br />ore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<br /><br />Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut modo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet.</p>
+                </div>
+                <div data-w-id="b000aa60-f756-2897-7ace-a9d1383eb7b2" style="opacity:0" class="app w-col w-col-8">
+                <img src="https://assets.website-files.com/53828cf678e1ff6971386e1d/53837f7cf8f9341954518299_app-mockup2.png" srcset="https://assets.website-files.com/53828cf678e1ff6971386e1d/53837f7cf8f9341954518299_app-mockup2-p-500x295.png 500w, https://assets.website-files.com/53828cf678e1ff6971386e1d/53837f7cf8f9341954518299_app-mockup2.png 600w" sizes="(max-width: 767px) 100vw, (max-width: 991px) 498.65625px, 639.984375px" alt="" /></div>
             </div>
         </div>
     </section>
@@ -114,28 +141,37 @@
                 <div class="column-service w-col w-col-4">
                     <img src="https://assets.website-files.com/53828cf678e1ff6971386e1d/5384aa201fae7daf76e9d610_footer3.png" width="30" alt="" /><div class="mail-contact">+1 046 244 3912</div>
                 </div>
-            <div class="column-service w-col w-col-4">
-                <img src="https://assets.website-files.com/53828cf678e1ff6971386e1d/5384a8fa1fae7daf76e9d5f8_footer2.png" width="30" alt="" /><a href="#" target="_blank" class="mail-contact">youremail@capp.com</a><a href="#" target="_blank" class="mail-contact mail-contact-2">other@gmail.com</a></div><div class="column-service w-col w-col-4"><img src="https://assets.website-files.com/53828cf678e1ff6971386e1d/5384a8daf86af53757dc0054_footer1.png" width="30" alt="" /><div class="mail-contact">350 Fourth Avenue, <br />34th floor New York, USA</div></div>
+                <div class="column-service w-col w-col-4">
+                    <img src="https://assets.website-files.com/53828cf678e1ff6971386e1d/5384a8fa1fae7daf76e9d5f8_footer2.png" width="30" alt="" /><a href="#" target="_blank" class="mail-contact">youremail@capp.com</a><a href="#" target="_blank" class="mail-contact mail-contact-2">other@gmail.com</a>
+                </div><div class="column-service w-col w-col-4"><img src="https://assets.website-files.com/53828cf678e1ff6971386e1d/5384a8daf86af53757dc0054_footer1.png" width="30" alt="" /><div class="mail-contact">350 Fourth Avenue, <br />34th floor New York, USA</div></div>
             </div>
             <div class="line-footer"></div>
             <div class="logo-footer">
-            <img src="" width="140" alt="" /></div>
-            <div class="social-footer"><a href="#" class="circle-footer w-inline-block">
-                <img src="https://assets.website-files.com/53828cf678e1ff6971386e1d/5384ac9991d6d8ae76f27ba8_facebook-footer.png" width="18" alt="" /></a>
-            <a href="#" class="circle-footer w-inline-block">
-                <img src="https://assets.website-files.com/53828cf678e1ff6971386e1d/5384acb991d6d8ae76f27bab_twitter-footer.png" width="18" alt="" /></a>
-            <a href="#" class="circle-footer w-inline-block">
-                <img src="https://assets.website-files.com/53828cf678e1ff6971386e1d/5384acc391d6d8ae76f27bae_dribble-footer.png" width="18" alt="" /></a>
-            <a href="#" class="circle-footer w-inline-block">
-                <img src="https://assets.website-files.com/53828cf678e1ff6971386e1d/5384acd21fae7daf76e9d647_rss-footer.png" width="18" alt="" /></a>
-            <a href="#" class="circle-footer w-inline-block">
-                <img src="https://assets.website-files.com/53828cf678e1ff6971386e1d/5384acf091d6d8ae76f27bdb_google-footer.png" width="18" alt="" /></a>
-                </div>
+                <img src="" width="140" alt="" />
+            </div>
+            <div class="social-footer">
+                <a href="#" class="circle-footer w-inline-block">
+                    <img src="https://assets.website-files.com/53828cf678e1ff6971386e1d/5384ac9991d6d8ae76f27ba8_facebook-footer.png" width="18" alt="" />
+                </a>
+                <a href="#" class="circle-footer w-inline-block">
+                    <img src="https://assets.website-files.com/53828cf678e1ff6971386e1d/5384acb991d6d8ae76f27bab_twitter-footer.png" width="18" alt="" />
+                </a>
+                <a href="#" class="circle-footer w-inline-block">
+                    <img src="https://assets.website-files.com/53828cf678e1ff6971386e1d/5384acc391d6d8ae76f27bae_dribble-footer.png" width="18" alt="" />
+                </a>
+                <a href="#" class="circle-footer w-inline-block">
+                    <img src="https://assets.website-files.com/53828cf678e1ff6971386e1d/5384acd21fae7daf76e9d647_rss-footer.png" width="18" alt="" />
+                </a>
+                <a href="#" class="circle-footer w-inline-block">
+                    <img src="https://assets.website-files.com/53828cf678e1ff6971386e1d/5384acf091d6d8ae76f27bdb_google-footer.png" width="18" alt="" />
+                </a>
+            </div>
             <div class="copyright-div">
                 <div class="left-copyright-flex right">
                     <p class="copyright">Champ by <a href="http://www.ceferin.com/" target="_blank" class="link-2 white">Ceferin Web Solutions</a></p><a href="https://www.ceferin.com" target="_blank" class="made-with-webflow left-margin w-inline-block">
-                    <img src="https://assets.website-files.com/53828cf678e1ff6971386e1d/5dee5b49e942e77c244f2e6a_webflow.png" width="15" alt="" class="webflow-logo-tiny" />
-                    <div class="paragraph-tiny">Powered by Ceferin</div></a><a href="" target="_blank" class="made-with-webflow left-margin w-inline-block">
+                        <img src="https://assets.website-files.com/53828cf678e1ff6971386e1d/5dee5b49e942e77c244f2e6a_webflow.png" width="15" alt="" class="webflow-logo-tiny" />
+                        <div class="paragraph-tiny">Powered by Ceferin</div>
+                    </a><a href="" target="_blank" class="made-with-webflow left-margin w-inline-block">
                         <div class="paragraph-tiny"></div>
                     </a>
                 </div>
